# tripo-rust-sdk

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: get_balance.rs  get_task.rs  image_to_3d.rs  image_to_model.rs  list_tasks.rs  text_to_3d.rs  text_to_model.rs  upload_image.rs  upload_image_s3.rs  wait_and_download.rs
src/: client.rs  error.rs  lib.rs  types.rs
tests/: download_model.rs  get_balance.rs  get_task.rs  image_to_3d.rs  image_to_model.rs  text_to_3d.rs  text_to_model.rs  wait_for_task.rs
tests/common/: mod.rs
