[package]
name = "tripo3d"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Official Tripo3d Rust SDK"
license = "MIT"
repository = "https://github.com/your-username/tripo-rust-sdk"
homepage = "https://platform.tripo3d.ai"
keywords = ["sdk", "tripo", "3d-generation"]
categories = ["api-bindings"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
url = "2.5"
dotenvy = "0.15"
tracing = "0.1"
thiserror = "1.0"
tokio-util = { version = "0.7", features = ["codec"] }

[dev-dependencies]
tracing-subscriber = "0.3"
wiremock = "0.6"
tempfile = "3.10" 