[package]
name = "tripo3d"
version = "0.4.0"
edition = "2021"
authors = ["Jiang Lu <droidream@gmail.com>"]
description = "An unofficial Rust SDK for the Tripo3D API"
license = "MIT"
repository = "https://github.com/jianglu/tripo-rust-sdk"
homepage = "https://platform.tripo3d.ai"
keywords = ["sdk", "tripo", "3d-generation"]
categories = ["api-bindings"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
url = "2.5"
dotenvy = "0.15"
tracing = "0.1"
thiserror = "1.0"
tokio-util = { version = "0.7", features = ["codec"] }
tempfile = "3.10"
mime_guess = "2.0"
aws-config = "1.5"
aws-sdk-s3 = "1.37"
aws-credential-types = "1.2"
regex = "1.10"
once_cell = "1.19"
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
tungstenite = { version = "0.21", features = ["url"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tracing-subscriber = "0.3"
wiremock = "0.6"